Phase 4.5 propagation trace — no host-side geometric crossover (leak is non-geometric)
4-point snapshot table (BOA_PHASE45_TRACE) shows Thing.soaEnd1 carries
the +1 µm/step poison (cumulative +200 µm by step 200) while
Thing.soaCoord, Thing.soaUVec, and FilSegment.soaEnd1X stay clean
(max-axis deviation ≤ 0.0057 µm) at every point across three steps.
There is no host-side write-back from soaEnd1 into the binding kernel's
pose-pack inputs. The ~80% bindEvents drop must propagate through a
non-geometric consumer; static grep of every per-step end1AsPt3D
reader on -gpu glidingAssay500_val returns zero live readers (all
gated off or inert). Adds the methodology note that refresh-fix
pass/fail under re-poison is placement-dependent and not a clean
reader test; direct propagation measurement is.